correct ClientCacheServiceTest